@@ -1,3 +1,4 @@
+3/7/11 add a title bar to game popups, so that it's more obvious that they can be moved
 3/7/11 created description of model implementation in model.txt
 # 0.00.14 (49508) Mar 4, 2011
 3/4/11 feature request: add close button to Game popups
